tdf#154000 tdf#70423 sw: fix crash/freezing with huge text files

It was not possible to load or edit text files with very long
lines any more, because removed wrapping of the lines resulted
freezing and crash.

This reverts commit 745898eb2af2686ffbdfdc0e44984db67b172a59
"tdf#70423 Remove txtimport break in 10k chars line",
keeping only its unit test.

Fix also tdf#70423 by increasing the wrap limit from 10000
to 250000 characters, which still permit to load e.g. 50 MB
character or longer text lines, and to edit 5 MB or longer
text lines without crash or freezing.

Details: trying to load a relatively short 76 MB character
length text line shows a non-linear slowing down during the
load, resulting program crash after freezing 10 minutes.

Now this file is opened within seconds again, allowing to modify,
select and copy of the text before the full load of the document
(with linear speed). Loading a much shorter 5 MB character
length text line resulted an unusably slow editing previously:
waiting half minutes for changing, selecting or copying text
parts.

Manual test

Create a text file with a 76 MB character long line, and
open it:

$ seq 10000000 | tr '\n' ' '  >numbers.txt
$ soffice numbers.txt

Note: the reverted commit had also a paragraph limit exceeded
error using unlimited paragraph length, because that is limited
in 4 GiB characters since version 4.3, see tdf#30668 and commit
ba27366f3d6bc6b209ecd5c5cb79a9ee5315316a "Resolves: #i17171#
Writer paragraph cannot be longer than 65534 characters".

Change-Id: If91e340a8aac4d4ebc4097b19cfa854b5659da3b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148169
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>